fix: items in dropdown has no overflow in small screens

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -176,7 +176,6 @@
 }
 
 .posterContainer {
-  width: 27px;
   height: 40px;
   margin-right: 1rem;
   display: flex;
